k8s-gcp/backend-delpoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: k8app-backend-image:1.1
          imagePullPolicy: Never # get image locally. for imagePullPolicy: Never the images need to be on the minikube node.
          ports:
            - containerPort: 80
