k8s-gcp/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
    app: backend
spec:
  replicas: 2 # One pod will be killed when there is no load by HPA
  selector:
    matchLabels:
      app: backend
  strategy:
    type: Recreate # All existing Pods are killed before new ones are created
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: kotonium/k8app-backend-image:1.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 0.5
            requests:
              cpu: 0.25 # gives 1/2 of the limit
