k8s-gcp/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: k8app-frontend-image:1.2
          imagePullPolicy: Never # get image locally. for 'imagePullPolicy: Never' the images need to be on the minikube node.
          ports:
            - containerPort: 80
