k8s-gcp/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-backend
  labels:
    app: backend
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: backend
