k8s-gcp/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-frontend
  labels:
    app: frontend
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: https
      port: 443
      targetPort: 443
  selector:
    app: frontend
