k8s-gcp/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
    - hosts:
        - 'backend.k8s.codes'
        - www.backend.k8s.codes
      secretName: k8s-codes-tls-secret
  ingressClassName: nginx
  rules:
  - host: backend.k8s.codes
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: lb-backend
            port:
              number: 80
