k8s-gcp/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
#  annotations:
#    kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.codes
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: lb-frontend
            port:
              number: 80
