k8s-gcp/backend-network.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-network-policy
spec:
  podSelector:
    matchLabels:
      role: backend
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
