k8s-gcp/postgres-network.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: postgres-network-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: backend
      ports:
        - protocol: TCP
          port: 5432
  egress:
    - to:
      - podSelector:
          matchLabels:
            role: backend
      ports:
        - protocol: TCP
          port: 5432
